# mia-safety

./: .env  Dockerfile  Procfile  download_data.sh  fix_missing_files.sh  nixpacks.toml  pyproject.toml  railway.toml  requirements-dev.txt  requirements-jetson.txt  requirements.txt  run_api.sh  run_inference.sh  start.py
ai_core/: __init__.py
ai_core/data/: __init__.py
backend_api/: __init__.py  main.py
backend_api/api/: __init__.py
backend_api/api/v1/: __init__.py  router.py
backend_api/api/v1/endpoints/: __init__.py  detection.py  health.py  violations.py
backend_api/api/websocket/: __init__.py  stream_handler.py
backend_api/core/: __init__.py  cloud_config.py  config.py  state.py
backend_api/db/: __init__.py  session.py
backend_api/services/: __init__.py  detection_service.py  violation_service.py
backend_api/templates/: index.html
configs/: inference.yaml
data/: mia_violations.db
data/raw/construction-safety/train/: labels.cache
data/raw/construction-safety/valid/: labels.cache
runs/detect/runs/train/mia_safety/: args.yaml  results.csv
