# ═══════════════════════════════════════════════════════════════════════════════
# MIA (Mobile İSG Aracı) - Project Configuration
# PEP 517/518/621 compliant project metadata
# ═══════════════════════════════════════════════════════════════════════════════

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mia"
version = "0.1.0"
description = "Mobile İSG Aracı - AI-powered construction safety detection system"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.9"
authors = [
    {name = "MIA AI Team", email = "ai@mia-safety.com"}
]
keywords = [
    "computer-vision",
    "object-detection",
    "yolov8",
    "construction-safety",
    "ppe-detection",
    "edge-ai",
    "jetson"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]

# Core dependencies (minimal set for package distribution)
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "ultralytics>=8.2.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python-headless>=4.8.0",
    "albumentations>=1.4.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
# Full installation with all features
full = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "boto3>=1.33.0",
    "loguru>=0.7.0",
    "prometheus-client>=0.19.0",
]

# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

# Jetson edge deployment (minimal)
jetson = [
    "ultralytics>=8.2.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python-headless>=4.8.0",
    "pydantic>=2.5.0",
    "PyYAML>=6.0.1",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://mia-safety.com"
Documentation = "https://docs.mia-safety.com"
Repository = "https://github.com/mia-safety/mia"

[project.scripts]
mia-train = "scripts.train:main"
mia-infer = "scripts.inference:main"
mia-export = "scripts.export_model:main"
mia-api = "backend_api.main:start_server"

# ─────────────────────────────────────────────────────────────────────────────────
# SETUPTOOLS CONFIGURATION
# ─────────────────────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["ai_core*", "backend_api*", "configs*"]
exclude = ["tests*", "notebooks*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

# ─────────────────────────────────────────────────────────────────────────────────
# RUFF - Fast Python Linter
# ─────────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastAPI)
    "B904",   # raise without from (sometimes intentional)
]

[tool.ruff.lint.isort]
known-first-party = ["ai_core", "backend_api"]

# ─────────────────────────────────────────────────────────────────────────────────
# BLACK - Code Formatter
# ─────────────────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | notebooks
)/
'''

# ─────────────────────────────────────────────────────────────────────────────────
# MYPY - Static Type Checker
# ─────────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "albumentations.*",
    "ultralytics.*",
    "torch.*",
    "torchvision.*",
]
ignore_missing_imports = true

# ─────────────────────────────────────────────────────────────────────────────────
# PYTEST - Test Configuration
# ─────────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-ra",                      # Show extra summary for all except passed
    "-q",                       # Quiet mode
    "--strict-markers",         # Fail on unknown markers
    "--strict-config",          # Fail on config errors
    "-x",                       # Stop on first failure
    "--tb=short",               # Short traceback format
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
]
asyncio_mode = "auto"

# ─────────────────────────────────────────────────────────────────────────────────
# COVERAGE - Test Coverage
# ─────────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["ai_core", "backend_api"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
